# filevault-forensic

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  mkdocs.yml  release-plz.toml
.github/workflows/: ci.yml  fuzz.yml  release-plz.yml
core/: CHANGELOG.md  Cargo.toml
core/docs/: RESEARCH.md
core/fuzz/: Cargo.toml
core/fuzz/fuzz_targets/: fuzz_metadata.rs
core/src/: context.rs  error.rs  lib.rs  metadata.rs  read.rs  test_support.rs  unlock.rs  vfs.rs  volume.rs  volume_header.rs  xts.rs
core/tests/core_tests/: oracle_fvde.rs
docs/: DEFERRED.md  PRD.md  index.md  privacy.md  terms.md  validation.md
docs/decisions/: 0001-two-crate-reader-analyzer-split.md  0002-crate-naming-lib-alias.md  0003-rustcrypto-no-hand-rolled-primitives.md  0004-vfs-encryptionlayer-adapter.md  0005-password-independent-audit-observations.md  0006-oracle-first-validation.md  0007-paranoid-gatekeeper-panic-free.md  0008-scope-corestorage-apfs-deferred.md
forensic/: Cargo.toml
forensic/src/: lib.rs  tests.rs
forensic/tests/: entry_points.rs  oracle.rs
supply-chain/: config.toml
tests/data/: README.md
